hphp/hack/test/typecheck/inout/bad_inout_decl_parent3.php.exp
File "bad_inout_decl_parent3.php", line 8, characters 19-21:
Member foo has the wrong type (Typing[4341])
File "bad_inout_decl_parent3.php", line 8, characters 28-29:
This parameter is passed by reference
File "bad_inout_decl_parent3.php", line 4, characters 33-34:
It is incompatible with an inout parameter
